test/mutation_analysis/s0168_excel_sheet_column_title/hafis/starchat/mutants/3/result.txt
./test/mutation_analysis/s0168_excel_sheet_column_title/hafis/starchat/mutants/3/Solution.java:26: verify: The prover cannot establish an assertion (ArithmeticCastRange) in method convertToTitle
                sb.append((char) (remainder + 64));
                          ^
error: An error while executing a proof script for convertToTitle: (error "Solver has unexpectedly terminated")
1 error
1 verification failure
